testdata/baselines/reference/submodule/conformance/nodeModulesImportAttributesModeDeclarationEmit2(module=nodenext).errors.txt
/index.ts(1,45): error TS1454: `resolution-mode` can only be set for type-only imports.
/index.ts(1,45): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
/index.ts(2,15): error TS2305: Module '"/node_modules/pkg/require"' has no exported member 'ImportInterface'.
/index.ts(2,44): error TS1454: `resolution-mode` can only be set for type-only imports.
/index.ts(2,44): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
/index.ts(6,50): error TS1454: `resolution-mode` can only be set for type-only imports.
/index.ts(6,50): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
/index.ts(7,14): error TS2305: Module '"/node_modules/pkg/require"' has no exported member 'ImportInterface'.
/index.ts(7,49): error TS1454: `resolution-mode` can only be set for type-only imports.
/index.ts(7,49): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
/index.ts(10,45): error TS1454: `resolution-mode` can only be set for type-only imports.
/index.ts(10,45): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
/index.ts(11,15): error TS2305: Module '"/node_modules/pkg/require"' has no exported member 'ImportInterface'.
/index.ts(11,44): error TS1454: `resolution-mode` can only be set for type-only imports.
/index.ts(11,44): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.


==== /index.ts (15 errors) ====
    import type { RequireInterface } from "pkg" with { "resolution-mode": "require" };
                                                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1454: `resolution-mode` can only be set for type-only imports.
                                                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    import type { ImportInterface } from "pkg" with { "resolution-mode": "import" };
                  ~~~~~~~~~~~~~~~
!!! error TS2305: Module '"/node_modules/pkg/require"' has no exported member 'ImportInterface'.
                                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1454: `resolution-mode` can only be set for type-only imports.
                                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    
    export interface LocalInterface extends RequireInterface, ImportInterface {}
    
    import {type RequireInterface as Req} from "pkg" with { "resolution-mode": "require" };
                                                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1454: `resolution-mode` can only be set for type-only imports.
                                                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    import {type ImportInterface as Imp} from "pkg" with { "resolution-mode": "import" };
                 ~~~~~~~~~~~~~~~
!!! error TS2305: Module '"/node_modules/pkg/require"' has no exported member 'ImportInterface'.
                                                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1454: `resolution-mode` can only be set for type-only imports.
                                                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    export interface Loc extends Req, Imp {}
    
    export type { RequireInterface } from "pkg" with { "resolution-mode": "require" };
                                                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1454: `resolution-mode` can only be set for type-only imports.
                                                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    export type { ImportInterface } from "pkg" with { "resolution-mode": "import" };
                  ~~~~~~~~~~~~~~~
!!! error TS2305: Module '"/node_modules/pkg/require"' has no exported member 'ImportInterface'.
                                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1454: `resolution-mode` can only be set for type-only imports.
                                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    
==== /node_modules/pkg/package.json (0 errors) ====
    {
        "name": "pkg",
        "version": "0.0.1",
        "exports": {
            "import": "./import.js",
            "require": "./require.js"
        }
    }
==== /node_modules/pkg/import.d.ts (0 errors) ====
    export interface ImportInterface {}
==== /node_modules/pkg/require.d.ts (0 errors) ====
    export interface RequireInterface {}
==== /package.json (0 errors) ====
    {
        "private": true,
        "type": "module"
    }